can send noti if the new taks assign to the user

--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -72,33 +72,20 @@
                 <div class="navbar-nav align-items-center ms-auto">
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                            <i class="fa fa-bell me-lg-2 position-relative"></i>
+                            <i class="fa fa-bell me-lg-2 position-relative">
+                                <span
+                                        class="position-absolute d-none top-3 end-0 translate-middle bg-danger border border-light rounded-circle"
+                                        id="notification-light"
+                                        style="padding: 7px;">
+                                </span>
+                            </i>
                             <span class="d-none d-lg-inline-flex">Notification</span>
                         </a>
-                        <div class="dropdown-menu dropdown-menu-end bg-light border-dark rounded-bottom m-0 overflow-auto" style="height: 200px">
-                            <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">Profile updated</h6><small>15 minutes ago</small>
-                            </a>
-                            <hr class="dropdown-divider" />
-                            <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">New user added</h6><small>15 minutes ago</small>
-                            </a>
-                            <hr class="dropdown-divider" />
-                            <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">Password changed</h6><small>15 minutes ago</small>
-                            </a>
-                            <hr class="dropdown-divider" />
-                            <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">New user added</h6><small>15 minutes ago</small>
-                            </a>
-                            <hr class="dropdown-divider" />
-                            <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">New user added</h6><small>15 minutes ago</small>
-                            </a>
-                            <hr class="dropdown-divider" />
-                            <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">New user added</h6><small>15 minutes ago</small>
-                            </a>
+                        <div
+                                class="dropdown-menu dropdown-menu-end bg-light border-dark rounded-bottom m-0 overflow-auto"
+                                id="notification-container"
+                                style="max-height: 300px"
+                        >
                         </div>
                     </div>
                     <div class="nav-item dropdown">
