--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -425,7 +425,7 @@
 
             console.log(pList);
 
-            const dPList = await getData("/api/department/list");
+            const dPList = await getData("/api/project/list");
 
             dPList.forEach((item) => {
                 const option = document.createElement("option");
